# mystudy

./: .gitignore  cvte_change_HCLG.fst.txt
vad/: CMakeLists.txt  cyVoice.h  libasr.cpp  libtest.cpp  main.cpp  nnet3-decoding.cpp  nnet3-decoding.h  runenv
vad/cyasr/: console.cpp
vad/test/: test_sdk.cpp  tieg.h
